# Pix2Ascii-1

./: .gitignore  CMakeLists.txt
project/include/: argparsing.h  frame_processing.h  frame_utils.h  utils.h
project/src/: argparsing.c  frame_processing.c  frame_utils.c  main.c  termstream.c
